--- a/templates/index.html
+++ b/templates/index.html
@@ -33,9 +33,17 @@
 		</form>
     <hr>
     {% for todo in todos %}
-        <div class="todo">
-            <p class="{{ todo.priority }}">{{ todo.content }} <em>({{ todo.priority }})</em></p>
-        </div>
+      <div class="todo">
+        <p class="{{ todo.priority }}">{{ todo.content }} <em>({{ todo.priority }})</em></p>
+      
+        <!-- New: delete button  -->
+        <form method="POST" action="{{ '/' ~ todo._id ~ '/delete/'  }}">
+          <input 
+            type="submit" 
+            value="Delete Todo" 
+            onclick="return confirm('Are you sure you want to delete this entry?')">
+        </form>
+    </div>
     {% endfor %}
 	</div>
 </body>
