--- a/static/styles.css
+++ b/static/styles.css
@@ -1,17 +1,32 @@
 body {
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	font-size: 18px;
+	background-color: #c0c0c0cc;
+}
+
+.container {
+  max-width: 600px;
+  margin: 40px auto;
+  padding: 20px;
+  background-color: white;
+  border: 1px solid #333;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  border-radius: 10px;
+}
+
+h1 {
+	text-align: center;
 }
 
 .todo {
 	padding: 20px;
 	margin: 10px;
-	background-color: #eee;
+	background-color: #382121;
 }
 
 button, input[type=submit] {
 	padding: 0.5rem;
-	background-color: #000;
+	background-color: #070000;
 	border-radius: 0.5rem;
 	border: none;
 	color: #fff;
@@ -24,4 +39,20 @@ input[type=text] {
 	border-style: solid;
 	border-radius: 0.5rem;
 	font-size: 1rem;
+}
+
+.content .High {
+  color: red;
+}
+
+.Medium {
+  color: yellow;
+}
+
+.Low {
+  color: green;
+}
+
+.content span {
+  color: rgb(2, 0, 2);
 }
