--- a/templates/index.html
+++ b/templates/index.html
@@ -1,50 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-    <title>FlaskApp</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+
+  <title>FlaskApp</title>
 </head>
 <body>
+  <div class="container">
     <h1>FlaskTODO</h1>
-	<hr>
-	<div class="content">
-		<form action="/" method="post">
-			<p>
-				<label>Todo:
-				  <input type="text" name="content" placeholder="Todo Content">
-        </label>
-			</p>
+    <hr>
+    <div class="content">
+      <form action="/" method="post">
+        <p>
+          <label>Todo:
+            <input type="text" name="content" placeholder="Todo Content">
+          </label>
+        </p>
 
-			<div>
-        <p>Priority:</p>
-				  
-        <p><label>
-          <input name="priority" required type="radio" value="Important">
-          Important</label></p>
-				
-        <p><label>
-          <input name="priority" required type="radio" value="Unimportant">
-          Unimportant</label></p>
-				
+        <div>
+          <p>Priority:</p>
+
+          <p><label>
+            <input name="priority" required type="radio" value="High">
+            <span>High</span></label></p>
+
+          <p><label>
+            <input name="priority" required type="radio" value="Medium">
+            <span>Medium</span></label></p>
+
+          <p><label>
+            <input name="priority" required type="radio" value="Low">
+            <span>Low</span></label></p>
         </div>
 
-			<p><button type="submit">Submit</button></p>
-		</form>
-    <hr>
-    {% for todo in todos %}
-      <div class="todo">
-        <p class="{{ todo.priority }}">{{ todo.content }} <em>({{ todo.priority }})</em></p>
-      
-        <!-- New: delete button  -->
-        <form method="POST" action="{{ '/' ~ todo._id ~ '/delete/'  }}">
-          <input 
-            type="submit" 
-            value="Delete Todo" 
-            onclick="return confirm('Are you sure you want to delete this entry?')">
-        </form>
+        <p><button type="submit">Submit</button></p>
+      </form>
+      <hr>
+      {% for todo in todos %}
+        <div class="todo">
+          <p class="{{ todo.priority }}">
+            {% if todo.complete %}
+              <s>{{ todo.content }}</s> <em>(Completed)</em>
+            {% else %}
+              {{ todo.content }} <em>({{ todo.priority }})</em>
+              <!-- COMPLETE BUTTON -->
+              <form method="POST" action="{{ url_for('complete_todo', id=todo._id) }}">
+                <input type="submit" value="Mark as Complete">
+              </form>
+            {% endif %}
+            <br>
+            <small>Added on: {{ todo.date_added.strftime('%Y-%m-%d %H:%M:%S UTC') }}</small>
+          </p>
+                    
+          <!-- DELETE BUTTON -->
+          <form method="POST" action="{{ '/' ~ todo._id ~ '/delete/' }}">
+            <input 
+              type="submit" 
+              value="Delete Todo" 
+              onclick="return confirm('Are you sure you want to delete this entry?')">
+          </form>
+        </div>
+      {% endfor %}
     </div>
-    {% endfor %}
-	</div>
+  </div>
 </body>
 </html>
